maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:22: error: not found: value x
  setIndication(x,y,0)
                ^JediEscaper:22: error: not found: value y
  setIndication(x,y,0)
                  ^